@@ -1,3 +1,6 @@
+- Next version:
+  * Add incremental decoding support for images containing ALPH and ICCP chunks.
+
 - 3/20/13: version 0.3.0
   This is a binary compatible release.
   * WebPINewRGB/WebPINewYUVA accept being passed a NULL output buffer
